# Universidad

./: README.md
AC-2015/: README.md
AC-2015/FASE I/: Doc_Pablo.docx  Documentación - Jorge.docx  Documentación - Marcos.docx  Documentasion Finals.docx  EISI - Alberto.pptx  EISI - Jorge.pptx  EISI - Marcos.pptx  EISI.pptx  EvaluacionDeResultadosAlberto.docx  enlaces.txt
AC-2015/FASE II/: Benchmark.pptx  BenchmarkBubble.cpp  BenchmarkConParte3.pptx  Doc_Marcos.docx  Doc_Pablo.docx  DocumentacionBenchmarkSintetico.docx
AC-2015/FASE III/: Fase3.docx  Fase3.pptx  fase3.1.rar
AC-2015/FASE IV/: Fase4.docx  Fase4ConParteDesarrollo.docx  Fase4final.docx
IC-2015/: README.md
IC-2015/PRAC 1/: IC Marcos.docx  IC.docx  Introducción a los Problemas Paralelos.docx  Practica 1.pptx
IC-2015/PRAC 2/: Main.docx  Práctica2.docx  pix.cpp  pix16c.xcf  pixopencv  portada.xcf
IC-2015/PRAC 3/: Práctica 3.pptx  Práctica 3FINAL.pptx  Tiempos.ods  marcos.txt  pix (copia de seguridad).cpp  pix.cpp  pixopencv
IC-2015/PRAC 4/: Paralelismo a nivel de proceso 2.docx  Paralelismo a nivel de proceso.docx  Práctica 4.pptx  pix.cpp  practica4.rar
Minitunes/: CMakeLists.txt  Minitunes.cpp  README.md
PED-2015/: README.md  TCalendario.cpp  TCalendario.h
PED-2015/tads/: tadsvectorcalendariocomparatad.txt
PED-2015/tcalendario/: tad
dp2017/: DP.docx  README.md  homus_LeNet5.py  wilcox.R  workfile_CV  workfile_CV_aug  workfile_CV_max_all  workfile_CV_max_fin
dp2017/data_process/: imageRotation.py  imageRotation_noise.py
dp2017/javaluador/: P100.java
pl2018/: README.md
(+118 files in other folders)
